--- a/package.json
+++ b/package.json
@@ -3,10 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
+    "compressorjs": "^1.2.1",
     "cra-template-aventude-citrus65client": "1.0.1",
+    "d3": "^7.9.0",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.544.0",
+    "moment": "^2.30.1",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-scripts": "5.0.1"
+    "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.3",
+    "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,8 +50,12 @@
   "devDependencies": {
     "@types/d3": "^7.4.3",
     "@types/howler": "^2.2.12",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/node": "^24.6.2",
+    "@types/react-dom": "^19.2.0",
     "@types/react-headroom": "^3.2.3",
     "@types/react-lottie": "^1.2.10",
+    "@types/redux-persist": "^4.0.0",
     "tailwindcss": "^3.4.12",
     "typescript": "^4.9.5"
   }
